// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`apiContracts > buildDeleteRoute > sets default delete route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": true,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "delete",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`apiContracts > buildGetRoute > resolves path params 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {
        "userId": ZodString {
          "and": [Function],
          "array": [Function],
          "base64": [Function],
          "base64url": [Function],
          "brand": [Function],
          "catch": [Function],
          "check": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "clone": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "def": {
            "type": "string",
          },
          "default": [Function],
          "describe": [Function],
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "endsWith": [Function],
          "format": null,
          "guid": [Function],
          "includes": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "isNullable": [Function],
          "isOptional": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "length": [Function],
          "lowercase": [Function],
          "max": [Function],
          "maxLength": null,
          "meta": [Function],
          "min": [Function],
          "minLength": null,
          "nanoid": [Function],
          "nonempty": [Function],
          "nonoptional": [Function],
          "normalize": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "overwrite": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "prefault": [Function],
          "readonly": [Function],
          "refine": [Function],
          "regex": [Function],
          "register": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "startsWith": [Function],
          "superRefine": [Function],
          "time": [Function],
          "toLowerCase": [Function],
          "toUpperCase": [Function],
          "transform": [Function],
          "trim": [Function],
          "ulid": [Function],
          "uppercase": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      },
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "requestQuerySchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`apiContracts > buildGetRoute > sets default get route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": {
    "hello": "world",
  },
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "catchall": [Function],
      "check": [Function],
      "clone": [Function],
      "def": {
        "shape": {},
        "type": "object",
      },
      "default": [Function],
      "describe": [Function],
      "extend": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "keyof": [Function],
      "loose": [Function],
      "merge": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "omit": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "partial": [Function],
      "passthrough": [Function],
      "pick": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "required": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "strict": [Function],
      "strip": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "400": ZodObject {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "catchall": [Function],
      "check": [Function],
      "clone": [Function],
      "def": {
        "shape": {
          "message": ZodString {
            "and": [Function],
            "array": [Function],
            "base64": [Function],
            "base64url": [Function],
            "brand": [Function],
            "catch": [Function],
            "check": [Function],
            "cidrv4": [Function],
            "cidrv6": [Function],
            "clone": [Function],
            "cuid": [Function],
            "cuid2": [Function],
            "date": [Function],
            "datetime": [Function],
            "def": {
              "type": "string",
            },
            "default": [Function],
            "describe": [Function],
            "duration": [Function],
            "e164": [Function],
            "email": [Function],
            "emoji": [Function],
            "endsWith": [Function],
            "format": null,
            "guid": [Function],
            "includes": [Function],
            "ipv4": [Function],
            "ipv6": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "jwt": [Function],
            "ksuid": [Function],
            "length": [Function],
            "lowercase": [Function],
            "max": [Function],
            "maxLength": null,
            "meta": [Function],
            "min": [Function],
            "minLength": null,
            "nanoid": [Function],
            "nonempty": [Function],
            "nonoptional": [Function],
            "normalize": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "overwrite": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "prefault": [Function],
            "readonly": [Function],
            "refine": [Function],
            "regex": [Function],
            "register": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "startsWith": [Function],
            "superRefine": [Function],
            "time": [Function],
            "toLowerCase": [Function],
            "toUpperCase": [Function],
            "transform": [Function],
            "trim": [Function],
            "ulid": [Function],
            "uppercase": [Function],
            "url": [Function],
            "uuid": [Function],
            "uuidv4": [Function],
            "uuidv6": [Function],
            "uuidv7": [Function],
            "xid": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
        "type": "object",
      },
      "default": [Function],
      "describe": [Function],
      "extend": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "keyof": [Function],
      "loose": [Function],
      "merge": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "omit": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "partial": [Function],
      "passthrough": [Function],
      "pick": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "required": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "strict": [Function],
      "strip": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  },
  "successResponseBodySchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "summary": undefined,
  "tags": undefined,
}
`;

exports[`apiContracts > buildPayloadRoute > sets default change route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "post",
  "pathResolver": [Function],
  "requestBodySchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "catchall": [Function],
      "check": [Function],
      "clone": [Function],
      "def": {
        "shape": {},
        "type": "object",
      },
      "default": [Function],
      "describe": [Function],
      "extend": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "keyof": [Function],
      "loose": [Function],
      "merge": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "omit": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "partial": [Function],
      "passthrough": [Function],
      "pick": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "required": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "strict": [Function],
      "strip": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "400": ZodObject {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "catchall": [Function],
      "check": [Function],
      "clone": [Function],
      "def": {
        "shape": {
          "message": ZodString {
            "and": [Function],
            "array": [Function],
            "base64": [Function],
            "base64url": [Function],
            "brand": [Function],
            "catch": [Function],
            "check": [Function],
            "cidrv4": [Function],
            "cidrv6": [Function],
            "clone": [Function],
            "cuid": [Function],
            "cuid2": [Function],
            "date": [Function],
            "datetime": [Function],
            "def": {
              "type": "string",
            },
            "default": [Function],
            "describe": [Function],
            "duration": [Function],
            "e164": [Function],
            "email": [Function],
            "emoji": [Function],
            "endsWith": [Function],
            "format": null,
            "guid": [Function],
            "includes": [Function],
            "ipv4": [Function],
            "ipv6": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "jwt": [Function],
            "ksuid": [Function],
            "length": [Function],
            "lowercase": [Function],
            "max": [Function],
            "maxLength": null,
            "meta": [Function],
            "min": [Function],
            "minLength": null,
            "nanoid": [Function],
            "nonempty": [Function],
            "nonoptional": [Function],
            "normalize": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "overwrite": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "prefault": [Function],
            "readonly": [Function],
            "refine": [Function],
            "regex": [Function],
            "register": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "startsWith": [Function],
            "superRefine": [Function],
            "time": [Function],
            "toLowerCase": [Function],
            "toUpperCase": [Function],
            "transform": [Function],
            "trim": [Function],
            "ulid": [Function],
            "uppercase": [Function],
            "url": [Function],
            "uuid": [Function],
            "uuidv4": [Function],
            "uuidv6": [Function],
            "uuidv7": [Function],
            "xid": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        },
        "type": "object",
      },
      "default": [Function],
      "describe": [Function],
      "extend": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "keyof": [Function],
      "loose": [Function],
      "merge": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "omit": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "partial": [Function],
      "passthrough": [Function],
      "pick": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "required": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "strict": [Function],
      "strip": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  },
  "successResponseBodySchema": ZodObject {
    "and": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "catchall": [Function],
    "check": [Function],
    "clone": [Function],
    "def": {
      "shape": {},
      "type": "object",
    },
    "default": [Function],
    "describe": [Function],
    "extend": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "keyof": [Function],
    "loose": [Function],
    "merge": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "omit": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "partial": [Function],
    "passthrough": [Function],
    "pick": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "required": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "strict": [Function],
    "strip": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "summary": undefined,
  "tags": undefined,
}
`;
